[metadata]
name = acknowledge
version = 0.1
author = Kristofer R. Söderström
author_email = kristofer.soderstrom@kultur.lu.se
description_file = README.md
keywords = openai, large language models, acknowledgements, information exraction
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
	pandas
	numpy
	tqdm
	openai
	re
	time
	ast 
	os
	json
	pickle
